WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127381
REGRESSION (
r161580
): Some PDFs render outside their <img>
https://bugs.webkit.org/show_bug.cgi?id=127381
Summary
REGRESSION (r161580): Some PDFs render outside their <img>
Tim Horton
Reported
2014-01-21 16:22:57 PST
In
r161580
, I made an adjustment to how we choose the final scale for PDF-in-<img>, to fix unexpected non-uniform scaling due to integer rounding at layout/paint time. Two issues with this: 1. It was happening for all PDFs, even if they had equal scale. 2. It was using the average of the endpoints of the intersection of the possible integer-rounded scale ranges, which is usually greater than the minimum original scale, which means that sometimes the scale we chose would cause the image to be painted outside of the bounds of the <img>. This broke icons in the Web Inspector on a branch where we have
r161580
but the Inspector icons are still PDF (not true on ToT). <
rdar://problem/15872168
>
Attachments
patch
(2.56 KB, patch)
2014-01-21 16:25 PST
,
Tim Horton
simon.fraser
: review+
thorton
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-01-21 16:25:07 PST
Created
attachment 221805
[details]
patch
Tim Horton
Comment 2
2014-01-21 17:29:23 PST
Comment on
attachment 221805
[details]
patch Gonna land it by hand.
Tim Horton
Comment 3
2014-01-21 17:30:01 PST
http://trac.webkit.org/changeset/162486
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug