REGRESSION (r161580): Some PDFs render outside their <img> https://bugs.webkit.org/show_bug.cgi?id=127381 <rdar://problem/15872168>

Reviewed by Simon Fraser.

* platform/graphics/cg/PDFDocumentImage.cpp:
(WebCore::transformContextForPainting):
Only try to make the scale uniform if it isn't already, and use the minimum
of the two original scales when doing so, so that it is absolutely certain
to fit inside space allocated for the image during layout.


Canonical link: https://commits.webkit.org/145395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162486 268f45cc-cd09-0410-ab3c-d52691b4dbfc